syntax = "proto3";

package errors;

enum ErrorCode {
    BAD_REQUEST = 0;
    UNAUTHENTICATED = 1;
    FORBIDDEN = 2;
    NOT_FOUND = 3;
    CLIENT_DISCONNECT = 4;
    OVERLOADED = 5;
    OCC = 6;
    PAGINATION_LIMIT = 7;
    OUT_OF_RETENTION = 8;
    OPERATIONAL_INTERNAL_SERVER_ERROR = 9;
}

message ErrorMetadata {
  ErrorCode code = 1;
  optional string short_msg = 2;
  optional string msg = 3;
}

// The message we put in tonic::Status details.
// It is important this message parses from empty bytes.
message StatusDetails {
  // The metadata is indeed optional.
  ErrorMetadata error_metadata = 1;
}
